# API_interface

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  dockerfile
.github/workflows/: main.yml
.sqlx/: query-06c945e50567c6801f1346d436cdc86a82a4e13dd45d8286295ba37cdbdc045e.json  query-39ddb11c656f1106a7c4a0225574f9e1548306c9779da0a4f47a84ef1339ccac.json  query-888ba5caa8bd104ca9114c1427c367be06b2d6112d5c498ee7f5fcee5ddf5113.json
scripts/: setup_db.sql
src/: config.rs  db.rs  main.rs
src/k8s/: mod.rs
src/models/: role.rs  user.rs
src/routes/: admin.rs  auth.rs  browser.rs  mod.rs  regle.rs
src/utils/: extract_user.rs  hash.rs  jwt.rs  mod.rs
